# PACE2018

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.tex  conn_test.py  fix_indent.sh  get_results.py  readme.bib  run.sh  todot.py  todot2.py  todot3.py  verifier.py
include_override/paal/greedy/: steiner_tree_greedy.hpp
parameterTuning/: main.py
src/: MST.cpp  debug.hpp  dfs.hpp  graph.hpp  heuristics.hpp  magic_constants.hpp  paal_glue.hpp  read.hpp  read_test.cpp  star_contractions.hpp  star_contractions_test.cpp  tdist.hpp  test.cpp  write.hpp  write_test.cpp
utils/: gr2nx.py
