cmake_minimum_required(VERSION 2.6)
project(Pace)
set(CMAKE_CXX_FLAGS "-std=c++14 -O3 -Wall -Wextra -Wno-unused-result -Wfatal-errors -march=native -DNDEBUG -I./include_override -I./include/boost_1_66_0/ -I./include/paal/include/")
# set(CMAKE_CXX_FLAGS_DEBUG "-O3 -I include/boost_1_66_0/")
# set(CMAKE_CXX_FLAGS_MINSIZEREL "-O3 -I include/boost_1_66_0/")
# set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -I include/boost_1_66_0/")
# set(CMAKE_CXX_FLAGS_RELEASE "-O3 -I include/boost_1_66_0/")
add_executable(cuib src/star_contractions_test.cpp)
#install(TARGETS wtf  DESTINATION .)
